--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "description": "sapper-tailwind",
   "version": "0.0.0",
   "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build",
-    "export": "sapper export",
-    "start": "node __sapper__/build"
+    "dev": "run-p css:watch sapper:dev",
+    "build": "run-s css:build sapper:build",
+    "export": "run-s css:build sapper:export",
+    "start": "node __sapper__/build",
+    "sapper:dev": "sapper dev",
+    "sapper:build": "sapper build",
+    "sapper:export": "sapper export",
+    "css:watch": "postcss src/tailwind.css -o static/global.css -w",
+    "css:build": "cross-env NODE_ENV=production postcss src/tailwind.css -o static/global.css"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -23,10 +28,17 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-replace": "^2.3.4",
+    "cssnano": "^4.1.10",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.2",
+    "postcss-cli": "^8.3.1",
+    "postcss-preset-env": "^6.7.0",
     "rollup": "^2.35.1",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "sapper": "^0.28.10",
-    "svelte": "^3.31.1"
+    "svelte": "^3.31.1",
+    "svelte-preprocess": "^4.6.1",
+    "tailwindcss": "^2.0.2"
   }
 }
