--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "description": "sapper-tailwind",
   "version": "0.0.0",
   "scripts": {
+    "start": "node __sapper__/build",
     "dev": "run-p css:watch sapper:dev",
     "build": "run-s css:build sapper:build",
     "export": "run-s css:build sapper:export",
-    "start": "node __sapper__/build",
+    "prelint": "npm run format",
+    "lint": "eslint ./**/*.{js,svelte}",
+    "lint:fix": "eslint --fix --ext .js,.svelte .",
+    "format": "prettier --write src/**/*.{svelte,js,json,css}",
     "sapper:dev": "sapper dev",
     "sapper:build": "sapper build",
     "sapper:export": "sapper export",
     "css:watch": "postcss src/tailwind.css -o static/global.css -w",
     "css:build": "cross-env NODE_ENV=production postcss src/tailwind.css -o static/global.css"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -29,10 +38,16 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-replace": "^2.3.4",
     "cssnano": "^4.1.10",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-svelte3": "^3.0.0",
+    "husky": "^4.3.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.2",
     "postcss-cli": "^8.3.1",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^1.4.2",
     "rollup": "^2.35.1",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
