--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "run-s css:build sapper:build",
     "export": "run-s css:build sapper:export",
     "prelint": "npm run format",
+    "pretest": "npm run lint",
     "lint": "eslint ./**/*.{js,svelte}",
     "lint:fix": "eslint --fix --ext .js,.svelte .",
     "format": "prettier --write src/**/*.{svelte,js,json,css}",
+    "test": "jest src --coverage",
     "sapper:dev": "sapper dev",
     "sapper:build": "sapper build",
     "sapper:export": "sapper export",
@@ -33,16 +35,26 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/runtime": "^7.12.5",
+    "@cypress/code-coverage": "^3.9.0",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-replace": "^2.3.4",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/svelte": "^3.0.3",
+    "@testing-library/user-event": "^12.6.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "cssnano": "^4.1.10",
+    "cypress": "^6.2.1",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-svelte3": "^3.0.0",
     "husky": "^4.3.6",
+    "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.2",
     "postcss-cli": "^8.3.1",
@@ -50,10 +62,13 @@
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^1.4.2",
     "rollup": "^2.35.1",
+    "rollup-plugin-istanbul": "^3.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "sapper": "^0.28.10",
     "svelte": "^3.31.1",
+    "svelte-htm": "^1.1.1",
+    "svelte-jester": "^1.3.0",
     "svelte-preprocess": "^4.6.1",
     "tailwindcss": "^2.0.2"
   }
